# cetane

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: core.rs  fallback.rs  lib.rs  signed.rs  simd.rs  unsigned.rs
tests/: common.rs  property.proptest-regressions  property.rs  unit.rs
